@@ -1,4 +1,10 @@
 --------------------------------------------------------------------------------
+ OSM2World 0.2.0                                                     2012-??-?? 
+--------------------------------------------------------------------------------
+ 
+ * introduce BridgeTunnelElevationCalculator as the new default
+ 
+--------------------------------------------------------------------------------
  OSM2World 0.1.9                                                     2012-01-11 
 --------------------------------------------------------------------------------
  
